# inmoov_core

./: CMakeLists.txt  README.md  package.xml
src/: logger.cpp  logger_class.cpp  publisher_class.cpp  publisher_class_comp.cpp  simple.cpp  subscriber_class.cpp  system.cpp
